LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Duration_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Duration_for_Reports__c</fullName>
    <formula>IF(
 ISPICKVAL( Status , &apos;Internal / External Discussions&apos;) ,  Internal_External_StageDate_for_Report__c -  CreatedDate , 
 IF( ISPICKVAL(Status, &apos;Client Take-On PreWork&apos;) ,  Client_Take_On_PreWork_stageDate_Report__c -  Internal_External_StageDate_for_Report__c , 
 IF( ISPICKVAL(Status, &apos;Client Take On&apos;) ,  Client_Take_On_Stage_Date_for_Reports__c -  Client_Take_On_PreWork_stageDate_Report__c , 
 IF( OR(ISPICKVAL(Status, &apos;Accept Client&apos;),ISPICKVAL(Status, &apos;NotAccept&apos;)) ,  Accept_Decline_Stage_for_Reports__c  - Client_Take_On_Stage_Date_for_Reports__c, 0) ) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (for Reports)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>