LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Duration_in_Client_Prework_Stage__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Client_Prework_Stage__c</fullName>
    <formula>IF(
   AND
  ( ISBLANK( Client_Prework_Change_Date__c ), ISBLANK(Client_Takeon_Change_Date__c)), 
    0,
IF( ISBLANK(Client_Takeon_Change_Date__c),
  ( today() - Client_Prework_Change_Date__c ),
  ( Client_Takeon_Change_Date__c -  Client_Prework_Change_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Client Prework Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>