LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Duration_in_Int_Ext_Stage__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Int_Ext_Stage__c</fullName>
    <formula>IF( 
    AND
  ( ISBLANK( Client_Prework_Change_Date__c ), ISBLANK(Int_Ext_Change_Date__c )),
  ( today() - Int_Ext_Change_Date__c),
  ( Client_Prework_Change_Date__c -  Int_Ext_Change_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Int/Ext Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>