LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Duration_in_New_Stage__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_New_Stage__c</fullName>
    <formula>IF(Int_Ext_Change_Date__c = NULL, 
  (today() - New_Change_Date__c),
  (Int_Ext_Change_Date__c -  New_Change_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in New Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>