LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <inlineHelpText>Earnings Before Interest, Taxes, Depreciation and Amortization</inlineHelpText>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>