LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Enquiry_details__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_details__c</fullName>
    <label>Enquiry details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>