LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Enquiry_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Expertise__c</fullName>
    <description>This field contains the comma separated expertise values.</description>
    <label>Enquiry Expertise</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>