LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <description>This field contains the category information of enquiry.</description>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enquiry_Type</valueSetName>
    </valueSet>
</CustomField>