LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <label>SIC Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>