LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>Existing_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the existing client Id if the enquiry is created for existing client.</description>
    <label>Existing Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquiries (Existing Client)</relationshipLabel>
    <relationshipName>Enquiries2</relationshipName>
    <type>Lookup</type>
</CustomField>