LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ExistingServiceProviders__c.field-meta.xml
<CustomField>
    <fullName>ExistingServiceProviders__c</fullName>
    <label>Existing Service Providers</label>
    <type>TextArea</type>
</CustomField>