LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ExpertiesForDuplicateRule__c.field-meta.xml
<CustomField>
    <fullName>ExpertiesForDuplicateRule__c</fullName>
    <label>ExpertiesForDuplicateRule</label>
    <type>TextArea</type>
</CustomField>