LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Expertise_For_POC__c.field-meta.xml
<CustomField>
    <fullName>Expertise_For_POC__c</fullName>
    <label>Expertise (For POC)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expertise</valueSetName>
    </valueSet>
</CustomField>