LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Expertise_LT__c.field-meta.xml
<CustomField>
    <fullName>Expertise_LT__c</fullName>
    <label>Expertise</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>