LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/ExpertiseForDeDupe__c.field-meta.xml
<CustomField>
    <fullName>ExpertiseForDeDupe__c</fullName>
    <label>Expertise (For DeDupe)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>