LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Fee_INR_Lacs__c.field-meta.xml
<CustomField>
    <fullName>Fee_INR_Lacs__c</fullName>
    <formula>TentativeFee__c / 100000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tentative Fee (INR in Lacs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>