LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Former_BOD_company_Date_of_Appointmen__c.field-meta.xml
<CustomField>
    <fullName>Former_BOD_company_Date_of_Appointmen__c</fullName>
    <label>Former BOD company  &amp;  Tenure end date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>