LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Global_Ultimate_Owner__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Owner__c</fullName>
    <inlineHelpText>Entity at the top of the global corporate ownership structure</inlineHelpText>
    <label>Global Ultimate Owner</label>
    <type>TextArea</type>
</CustomField>