LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Golfer__c.field-meta.xml
<CustomField>
    <fullName>Golfer__c</fullName>
    <label>Golfer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>