LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>