LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/GrowthPotential__c.field-meta.xml
<CustomField>
    <fullName>GrowthPotential__c</fullName>
    <label>Growth Potential Of Client</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>