LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/GT_Alumni_Name__c.field-meta.xml
<CustomField>
    <fullName>GT_Alumni_Name__c</fullName>
    <description>If Referral is by GT’s ex-employee, then, the “GT Alumni Name” field to be mandatory,</description>
    <inlineHelpText>GT’s ex-employee</inlineHelpText>
    <label>GT Alumni Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>