LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/GTEmployee__c.field-meta.xml
<CustomField>
    <fullName>GTEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Industry as per CapIQ</inlineHelpText>
    <label>GT Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Clients1</relationshipName>
    <type>Lookup</type>
</CustomField>