LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Handicap__c.field-meta.xml
<CustomField>
    <fullName>Handicap__c</fullName>
    <label>Handicap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>