LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Have_you_met_with_client__c.field-meta.xml
<CustomField>
    <fullName>Have_you_met_with_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you met with client?</label>
    <type>Checkbox</type>
</CustomField>