LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/HeadQuarters__c.field-meta.xml
<CustomField>
    <fullName>HeadQuarters__c</fullName>
    <label>Headquarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>