LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/I_would_like_to_subscribe_to__c.field-meta.xml
<CustomField>
    <fullName>I_would_like_to_subscribe_to__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I would like to subscribe to</label>
    <type>Checkbox</type>
</CustomField>