LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IL_ApprovalRejectionRecommendation__c.field-meta.xml
<CustomField>
    <fullName>IL_ApprovalRejectionRecommendation__c</fullName>
    <label>IL Approval / Rejection Recommendation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>