LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/InboundReferral__c.field-meta.xml
<CustomField>
    <fullName>InboundReferral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GT Member Firms</label>
    <referenceTo>InboundReferral__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>