LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Independent_Director_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Independent_Director_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Independent Director Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>New Clients (Independent Director Contact Name)</relationshipLabel>
    <relationshipName>New_Clients3</relationshipName>
    <type>Lookup</type>
</CustomField>