LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Industry_for_Digital_Channels__c.field-meta.xml
<CustomField>
    <fullName>Industry_for_Digital_Channels__c</fullName>
    <label>Industry for Digital Channels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industries_for_digital_channels</valueSetName>
    </valueSet>
</CustomField>