LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Industry_Leader__c.field-meta.xml
<CustomField>
    <fullName>Industry_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It depicts which user has referred this lead.</description>
    <label>Industry Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>