LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IndustryLeaderApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>IndustryLeaderApprovalStatus__c</fullName>
    <label>Industry Leader Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>