LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IndustryLeaderApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>IndustryLeaderApprovedRejectedBy__c</fullName>
    <label>Industry Leader Approved / Rejected By</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>