LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IndustryLeaderApprovedRejectedDate__c.field-meta.xml
<CustomField>
    <fullName>IndustryLeaderApprovedRejectedDate__c</fullName>
    <label>Industry Leader Approved / Rejected Date</label>
    <type>Date</type>
</CustomField>