LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Int_Ext_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Int_Ext_Change_Date__c</fullName>
    <label>Int/Ext Change Date</label>
    <type>Date</type>
</CustomField>