LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Intermediary_Referral_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Referral_Firm_Name__c</fullName>
    <label>Intermediary Referral Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>