LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Internal_External_StageDate_for_Report__c.field-meta.xml
<CustomField>
    <fullName>Internal_External_StageDate_for_Report__c</fullName>
    <label>Internal /External StageDate(for Report)</label>
    <type>DateTime</type>
</CustomField>