LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IntroHive__Id__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Id__c</fullName>
    <description>External ID to reference back to IntroHive contact Id</description>
    <externalId>true</externalId>
    <label>IntroHive Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>