LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IntroHive__LinkedIn_Url__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__LinkedIn_Url__c</fullName>
    <label>LinkedIn Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>