LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IntroHive__Potential_Introductions__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Potential_Introductions__c</fullName>
    <description>IntroHive potential introductions from co-workers who know this lead</description>
    <label>Introhive Intro Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>