LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IntroHive__Top_Connected_Colleague__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Top_Connected_Colleague__c</fullName>
    <description>The colleague with the best relationship to the specified lead</description>
    <label>Top Connected Colleague</label>
    <length>255</length>
    <type>Text</type>
</CustomField>