LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IntroHive__Top_Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Top_Relationship_Strength__c</fullName>
    <label>Top Relationship Strength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>