LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/IntroHive__Updated_by_Introhive__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Updated_by_Introhive__c</fullName>
    <description>Indicates the product that was used to update this record when the action is performed via Introhive</description>
    <label>Updated by Introhive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>