LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Investment_Bank_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Investment_Bank_Firm_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Bank Firm Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Clients (Investment Bank Firm Name)</relationshipLabel>
    <relationshipName>New_Clients2</relationshipName>
    <type>Lookup</type>
</CustomField>