LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Investors_Private_Equity_Firms__c.field-meta.xml
<CustomField>
    <fullName>Investors_Private_Equity_Firms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investors / Private Equity Firms</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Clients (Investors / Private Equity Firms)</relationshipLabel>
    <relationshipName>New_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>