LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/is_Address_filled__c.field-meta.xml
<CustomField>
    <fullName>is_Address_filled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Address filled?</label>
    <type>Checkbox</type>
</CustomField>