LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Is_Client_From_Bill_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_From_Bill_To_Client__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Client From Bill To Client</label>
    <type>Checkbox</type>
</CustomField>