LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/is_Enquiry_Created_For_Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>is_Enquiry_Created_For_Existing_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used as an identifier for enquiries created for existing clients.</description>
    <label>is Enquiry Created For Existing Client?</label>
    <type>Checkbox</type>
</CustomField>