LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Is_Synced_with_WCGT__c.field-meta.xml
<CustomField>
    <fullName>Is_Synced_with_WCGT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synced with WCGT?</label>
    <type>Checkbox</type>
</CustomField>