LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Key_Account_Potential__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Potential__c</fullName>
    <label>Key Account Potential</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>