LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/KMP__c.field-meta.xml
<CustomField>
    <fullName>KMP__c</fullName>
    <label>KMP</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>