LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Last_Modified_By_for_WCGT__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_for_WCGT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By for WCGT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>