LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/LawFirm__c.field-meta.xml
<CustomField>
    <fullName>LawFirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Law Firm)</relationshipLabel>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>