LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/LawFirmContacts__c.field-meta.xml
<CustomField>
    <fullName>LawFirmContacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm Contacts</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.LawFirm__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>New Clients (Law Firm Contacts)</relationshipLabel>
    <relationshipName>New_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>