LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Listed__c.field-meta.xml
<CustomField>
    <fullName>Listed__c</fullName>
    <description>This field will be populated by the MCA service only and that to when the call is made using the CIN ID and not KID</description>
    <label>Listed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>