LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/MCA_ID__c.field-meta.xml
<CustomField>
    <fullName>MCA_ID__c</fullName>
    <label>MCA ID</label>
    <type>TextArea</type>
</CustomField>