LinKreta_POC_Repository/force-app/main/default/objects/Lead/fields/Meeting_Created__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used as an identifier whether the meeting is created or not in enquiry.</description>
    <label>Meeting Created?</label>
    <type>Checkbox</type>
</CustomField>